# MinimumPerfectHashFunction

./: CMakeLists.txt  MPHF.cpp  MPHF.h  Makefile  README  README.md  WRITEUP.docx  alien_10.txt  alien_100.txt  alien_1000.txt  compile_script  main  main.cpp  n10000_input.txt  n1000_input.txt  n100_input.txt  n10_input.txt
main.dSYM/Contents/Resources/DWARF/: main
